# projectsShared

./: readme.md
C_sfmlPathPlanning/: CMakeLists.txt  PathPlanning.cpp  build.sh  readme.md
LBMPC-FixedWingUAV-main/: README.md
LBMPC-FixedWingUAV-main/MAV-Flight-Simulator-master/Autopilot/: mavsim_trim.slx
LBMPC-FixedWingUAV-main/MAV-Flight-Simulator-master/Linear Model/: automated.m  compute_trim.m  matlab.mat  mav_dynamics.m  mavsim_trim.slxc  param_chap5.m
LBMPC-FixedWingUAV-main/RLMPC_fixed_wing/: READMEfirst.md  plotCSV.py  run001.csv
LBMPC-FixedWingUAV-main/RLMPC_fixed_wing/chap2/: mav_viewer.py  mavsim_chap2.py
LBMPC-FixedWingUAV-main/RLMPC_fixed_wing/chap3/: dataViewerDebug.py  data_viewer.py  mav_dynamics.py  mavsim_chap3.py
LBMPC-FixedWingUAV-main/RLMPC_fixed_wing/chap4/: mav_dynamics.py  mavsim_chap4.py  wind_simulation.py
LearningArcLength/: readme.md
MPCC_Python_CASADI/: readme.md
MPCC_Python_CASADI/src/: car_viewer.py  delayedMPC.py  findtheta.py  race_track_plot.py  reference_path_mpcc.py
Model Predicitve Contouring Control/: README.md
Model Predicitve Contouring Control/src/: border_adjustment.py  car_viewer.py  delayedMPC_main.py  dynamic_bicycle_model.py  mpcc_contol.py  mpcc_main.py
Model Predicitve Countering Control/src/: CubicSpline.py  border_adjustment.py  dynamic_bicycle_model_complex.py  load_map.py  mat_to_csv.py
Planning And Control of Autonomous Drone/: readme.md
sfmlPathPlanning/: CMakeLists.txt  PathPlanning.cpp  PathPlanning_Obstacle.cpp  main.cpp  readme.md
teb_catkin_ws_final/: readme.md
(+736 files in other folders)
